# M68HC16_Assembler

./: .gitignore  Cargo.toml  NOTICE  README.md  about.hbs  about.toml
.github/: FUNDING.yml
.github/workflows/: release.yml
crates/m68hc16-asm/: Cargo.toml
crates/m68hc16-asm-cli/: Cargo.toml
crates/m68hc16-asm-cli/src/: main.rs
crates/m68hc16-asm-gui/: Cargo.toml
crates/m68hc16-asm-gui/src/: main.rs
crates/m68hc16-asm/src/: diag.rs  directives.rs  encoder.rs  expr.rs  lexer.rs  lib.rs  parser.rs  symbols.rs
crates/m68hc16-asm/src/isa/: mod.rs  table.rs
crates/m68hc16-asm/src/output/: bin.rs  coff.rs  listing.rs  map.rs  mod.rs  srec.rs
crates/m68hc16-asm/tests/: golden.rs
crates/m68hc16-asm/tests/fixtures/public/: bitops.asm  bitops.bytes  newops.asm  newops.bytes  prep.asm  prep.bytes  regmov.asm  regmov.bytes  smoke.asm  smoke.bytes
docs/spec/: 00-survey.md  README.md  corpus-op-frequency.tsv  encoding-samples.tsv  isa-probe.tsv  isa-table.tsv  masm-mnemonic-table.tsv  sample-listing.txt
hooks/: pre-commit
tools/oracle/: Build-IsaMatrix.ps1  Build-IsaTable.ps1  Generate-IsaRust.ps1  Get-MasmEncoding.ps1  Invoke-MasmOracle.ps1  README.md  le_to_flat.py  lstbody.py  lstcmp.py  lstfull.py  lstpage.py  masm_xref.py  objcmp.py  objdump.py  objtypes.py  oracle.config.example.psd1  s19diff.py  typefold.py  typerule.py
