[package]
name = "m68hc16-asm-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Desktop GUI for the M68HC16 assembler"

[[bin]]
name = "m68hc16-asm-gui"
path = "src/main.rs"

[dependencies]
m68hc16-asm.workspace = true
eframe.workspace = true
rfd.workspace = true
anyhow.workspace = true
