[package]
name = "m68hc16-asm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "M68HC16 (CPU16) assembler library, output-compatible with Motorola MASM.exe"

[dependencies]
thiserror.workspace = true

[features]
default = []
private-fixtures = []
